bootstrap to fix

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,5 +1,5 @@
 
-    {% extends "blog/base.htmlS" %}
+    {% extends "blog/base.html" %}
     {% block content %}
         {% for post in posts %}
             <h1>{{ post.title }}</h1>
