--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,4 @@
-   {% extends "blog/base.htmlS" %}
+   {% extends "blog/base.html" %}
     {% block content %}
         <h1> About!</h1>
     {% endblock content %}
