--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,7 +21,7 @@
 <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #387191;">
-          <a class="navbar-brand" href="#">Django-Blog</a>
+          <a class="navbar-brand" href="{% url 'blog-home' %}">Django-Blog</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
